--- a/source/scss/blocks/_choice-section.scss
+++ b/source/scss/blocks/_choice-section.scss
@@ -100,6 +100,11 @@
                     height: 100%;
                 }
               }
+
+              @include ios{
+                width: 100%;
+                height: auto;
+              }
         }
     }
     }
